--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             <li>Vargant</li>
             <li>Docker</li>
             <li>Ansible</li>
-            <li>Integración continua</li>
+            <li>Integración continua: Madurez y Productividad en el desarrollo de Software</li>
         </ul>
     </body>
 </html>
