--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title> cursos de Alura </title>
+        <title> Cursos de DevOps de Alura </title>
     </head>
     <body>
         <ul>
