corrigiendo curso de vargant

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <ul>
-            <li>Vargant</li>
+            <li>Vargant: Gerenciando maquinas virtuales</li>
             <li>Docker: Creando containers sin dolor de cabeza</li>
             <li>Ansible</li>
             <li>Integración continua: Madurez y Productividad en el desarrollo de Software</li>
