--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <ul>
             <li>Vargant: Gerenciando maquinas virtuales</li>
             <li>Docker: Creando containers sin dolor de cabeza</li>
-            <li>Ansible: Infraestructura como código</li>
+            <li>Ansible</li>
             <li>Integración continua: Madurez y Productividad en el desarrollo de Software</li>
             <li>Kubernetes</li>
         </ul>
